Bug 215250 - Reloading page not needed in some case
Summary: Reloading page not needed in some case
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdewebkit (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-19 10:24 UTC by Cédric Bellegarde
Modified: 2010-11-18 14:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cédric Bellegarde 2009-11-19 10:24:43 UTC
Version:            (using KDE 4.3.3)
OS:                Linux
Installed from:    Archlinux Packages

Look at this site:
http://www.planet-libre.org/

Click on an article shortcut (http://www.planet-libre.org/#article5 for exemple) , webkitkde go to section in webpage...

Now, click on back button, webkitkde reload page instead of go to page top (like ktml and firefox)
Comment 1 Dawit Alemayehu 2009-12-04 22:45:03 UTC
SVN commit 1058655 by adawit:

Do not unnecessarily reload the page when navigating back within itself.

BUG: 215250


 M  +7 -0      webview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1058655
Comment 2 Dario Andres 2010-11-18 14:53:36 UTC
[Comment from a bug triager]
Moving old kdewebkit bug reports to kdelibs/kdewebkit. Sorry about the noise