Do not unnecessarily reload the page when navigating back within itself.

BUG: 215250